--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
   
 <body class = "back">
     <nav class="navbar navbar-expand-lg background">
-        <h1 class="navbar-brand">Latitude</h1>
+        <a href ='index.html'><h1 class="navbar-brand">Latitude</h1></a>
         <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,17 +26,17 @@
                     Plot
                     </a>
                     <div class="dropdown-menu text-dark" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item " href="#">Max Temperature</a>
-                        <a class="dropdown-item" href="#">Humidity</a>
-                        <a class="dropdown-item" href="#">Cloudiness</a>
-                        <a class="dropdown-item" href="#">Wind Speed</a>
+                        <a class="dropdown-item " href="maxtemp.html">Max Temperature</a>
+                        <a class="dropdown-item" href="humidity.html">Humidity</a>
+                        <a class="dropdown-item" href="cloud.html">Cloudiness</a>
+                        <a class="dropdown-item" href="speed.html">Wind Speed</a>
                     </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-dark" href="comparison.html">Comparison</a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link text-dark" href="#">Data</a>
+                    <a class="nav-link text-dark" href="data.html">Data</a>
                 </li>
             </ul>
         </div>
@@ -69,18 +69,18 @@
                 <hr/>
                 <div class = 'row'>
                     <div class = 'col-md-6'>
-                        <a href='#'><img class = 'compare-img' src = "assets/images/Fig1.png" alt='Latitude vs. Max Temperature'></a>
+                        <a href='maxtemp.html'><img class = 'compare-img' src = "assets/images/Fig1.png" alt='Latitude vs. Max Temperature'></a>
                     </div>
                     <div class = 'col-md-6'>
-                        <a href='#'><img class = 'compare-img' src = "assets/images/Fig2.png" alt='Latitude vs. Humidity'></a>
+                        <a href='humidity.html'><img class = 'compare-img' src = "assets/images/Fig2.png" alt='Latitude vs. Humidity'></a>
                     </div>
                 </div> 
                 <div class = 'row'> 
                     <div class = 'col-md-6'> 
-                        <a href='#'><img class = 'compare-img' src = "assets/images/Fig3.png" alt='Latitude vs. Cloudiness'></a>
+                        <a href='cloud.html'><img class = 'compare-img' src = "assets/images/Fig3.png" alt='Latitude vs. Cloudiness'></a>
                     </div>
                     <div class = 'col-md-6'>
-                        <a href='#'><img class = 'compare-img' src = "assets/images/Fig4.png" alt='Latitude vs. Wind Speed'></a>
+                        <a href='wind.html'><img class = 'compare-img' src = "assets/images/Fig4.png" alt='Latitude vs. Wind Speed'></a>
                         <br>
                     </div>   
                 </div>
