--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="test.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
   
 <body class = "back">
     <nav class="navbar navbar-expand-lg background">
-        <h1 class="navbar-brand">Latitude</h1>
+        <a href ='index.html'><h1 class="navbar-brand">Latitude</h1></a>
         <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,29 +26,28 @@
                     Plot
                     </a>
                     <div class="dropdown-menu text-dark" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item " href="#">Max Temperature</a>
-                        <a class="dropdown-item" href="#">Humidity</a>
-                        <a class="dropdown-item" href="#">Cloudiness</a>
-                        <a class="dropdown-item" href="#">Wind Speed</a>
+                        <a class="dropdown-item " href="maxtemp.html">Max Temperature</a>
+                        <a class="dropdown-item" href="humidity.html">Humidity</a>
+                        <a class="dropdown-item" href="cloud.html">Cloudiness</a>
+                        <a class="dropdown-item" href="speed.html">Wind Speed</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" href="#">Comparison</a>
+                    <a class="nav-link text-dark" href="comparison.html">Comparison</a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link text-dark" href="#">Data</a>
+                    <a class="nav-link text-dark" href="data.html">Data</a>
                 </li>
             </ul>
         </div>
     </nav>
-    <div class = "container back">
-      
+    <div class = "container">
         <div class = 'row'> 
           <div class = 'col-md-8'>
             <div class = 'box block'>
                 <h3 class="header-style">Summary: Latitude vs. X</h3>
                 <hr/>
-                <img src = "assets/images/Fig1.png" class = "img-align">
+                <img src = "assets/images/Fig1.png" class = "img-align" alt='Latitude vs. Max Temperature'>
                 The purpose of this project was to analyze how weather
                 changes as you get closer to the equator. To accomplish
                 this analysis, we first pulled data from the OpenWeatherMAP 
@@ -68,11 +67,23 @@
             <div class = 'box block'>
                 <h3 class="header-style">Visualizations</h3>
                 <hr/>
-                <img src = "assets/images/Fig1.png" class = "img-align">
-                <img src = "assets/images/Fig2.png" class = "img-right">
-                <img src = "assets/images/Fig3.png" class = "img-align">
-                <img src = "assets/images/Fig4.png" class = "img-right">
-                <br>
+                <div class = 'row'>
+                    <div class = 'col-md-6'>
+                        <a href='maxtemp.html'><img class = 'compare-img' src = "assets/images/Fig1.png" alt='Latitude vs. Max Temperature'></a>
+                    </div>
+                    <div class = 'col-md-6'>
+                        <a href='humidity.html'><img class = 'compare-img' src = "assets/images/Fig2.png" alt='Latitude vs. Humidity'></a>
+                    </div>
+                </div> 
+                <div class = 'row'> 
+                    <div class = 'col-md-6'> 
+                        <a href='cloud.html'><img class = 'compare-img' src = "assets/images/Fig3.png" alt='Latitude vs. Cloudiness'></a>
+                    </div>
+                    <div class = 'col-md-6'>
+                        <a href='wind.html'><img class = 'compare-img' src = "assets/images/Fig4.png" alt='Latitude vs. Wind Speed'></a>
+                        <br>
+                    </div>   
+                </div>
             </div>
           </div>
         </div>
