--- a/maxtemp.html
+++ b/maxtemp.html
@@ -41,37 +41,49 @@
             </ul>
         </div>
     </nav>
-    <div class = "container block">
+    <div class = "container">
         <div class = 'row'> 
-            <div class = 'col-md-12'>
-                <h3 class="header-style">Comparison: Latitude vs X</h3>
+          <div class = 'col-md-8'>
+            <div class = 'box block'>
+                <h3 class="header-style">Max Temperature</h3>
                 <hr/>
-                Click any plot to get an in-depth analysis 
-                <br><br><br>
+                <img src = "assets/images/Fig1.png" class = "float-center compare-img" alt='Latitude vs. Max Temperature'>
+                As expect, the weather becomes significantly warmer as one 
+                approaches the equator (0 Deg. Latitude). More interestingly, 
+                however, is the fact that the southern hemisphere tends to be 
+                warmer this time of year than the northern hemisphere. This may 
+                be due to the tilt of the earth at the time of they year this data 
+                was gathered.
             </div>
+         </div>
+        
+        
+        <div class = 'col-md-4'>
+            <div class = 'box block'>
+                <h3 class="header-style">Visualizations</h3>
+                <hr/>
+                <div class = 'row'>
+                    <div class = 'col-md-6'>
+                        <a href='maxtemp.html' class = "active" aria-pressed="true"><img class = 'compare-img' src = "assets/images/Fig1.png" alt='Latitude vs. Max Temperature'></a>
+                    </div>
+                    <div class = 'col-md-6'>
+                        <a href='humidity.html'><img class = 'compare-img' src = "assets/images/Fig2.png" alt='Latitude vs. Humidity'></a>
+                    </div>
+                </div> 
+                <div class = 'row'> 
+                    <div class = 'col-md-6'> 
+                        <a href='cloud.html'><img class = 'compare-img' src = "assets/images/Fig3.png" alt='Latitude vs. Cloudiness'></a>
+                    </div>
+                    <div class = 'col-md-6'>
+                        <a href='wind.html'><img class = 'compare-img' src = "assets/images/Fig4.png" alt='Latitude vs. Wind Speed'></a>
+                        <br>
+                    </div>   
+                </div>
+            </div>
+          </div>
         </div>
-        <div class = 'row'>
-            <div class = 'col-md-6'>
-                <h4 class="sub-header">vs. Max Temperature</h4>
-                <a href = 'maxtemp.html'><img class = "compare-img" src = "assets/images/Fig1.png" alt='Latitude vs. Max Temperature'></a>
-            </div>
-            <div class = 'col-md-6'>
-                <h4 class="sub-header">vs. Humidity</h4>
-                <a href = 'humidity.html'><img class = "compare-img" src = "assets/images/Fig2.png" alt='Latitude vs. Humidity'></a>
-            </div>
-        </div>
-        <div class = 'row'>
-            <div class = 'col-md-6'>
-                <h4 class="sub-header">vs. Cloudiness</h4>
-                <a href = 'cloud.html'><img class = "compare-img" src = "assets/images/Fig3.png" alt='Latitude vs. Cloudiness'></a>
-            </div>
-            <div class = 'col-md-6'>
-                <h4 class="sub-header">vs. Wind Speed</h4>
-                <a href = 'wind.html'><img class = "compare-img" src = "assets/images/Fig4.png" alt='Latitude vs. Wind Speed'></a>
-            </div>
-            </div>
-        </div>
-    </div>
+  
+      </div>
 
 </body>
 
