--- a/cloud.html
+++ b/cloud.html
@@ -48,7 +48,10 @@
                 <h3 class="header-style">Cloudiness</h3>
                 <hr/>
                 <img src = "assets/images/Fig3.png" class = "float-center compare-img" alt='Latitude vs. Cloudiness'>
-                Need analysis
+                From the plot, there does not appear to be a relationship 
+                between cloudiness and city latitude. This makes sense as we would expect 
+                cloud to travel across all latitudes will no correlation between the two variables.
+                Values ranges from 0 to 100%, it seems evenly distrubted.
             </div>
          </div>
         
