--- a/humidity.html
+++ b/humidity.html
@@ -48,7 +48,11 @@
                 <h3 class="header-style">Humidity</h3>
                 <hr/>
                 <img src = "assets/images/Fig2.png" class = "float-center compare-img" alt='Latitude vs. Humidity'>
-                Need analysis
+                At first glance, there doesn't to be a visible relationship between
+                humidity and latitude which is not unexpected. The data looks fairly static. 
+                From observation, there seems to be a range of values for different 
+                latitudes. From the graph, it displays there are more values with a humidity 
+                that is higher than 40% humidity.
             </div>
          </div>
         
