--- a/wind.html
+++ b/wind.html
@@ -48,7 +48,11 @@
                 <h3 class="header-style">Wind Speed</h3>
                 <hr/>
                 <img src = "assets/images/Fig4.png" class = "float-center compare-img" alt='Latitude vs. Wind Speed'>
-                Need analysis
+                From intial observations, there doesn't seem to be a relationship, but when we take 
+                a closer look we can see that as we move away from the equator (Latitude 0) there are 
+                more values with a higher wind speed and as we move closer to the equator there are less 
+                values with a high wind speed. This makes sense as cities further from the equator should be colder 
+                so we would expect higher wind speeds and vice versa.
             </div>
          </div>
         
