--- a/maxtemp.html
+++ b/maxtemp.html
@@ -48,7 +48,7 @@
                 <h3 class="header-style">Max Temperature</h3>
                 <hr/>
                 <img src = "assets/images/Fig1.png" class = "float-center compare-img" alt='Latitude vs. Max Temperature'>
-                As expect, the weather becomes significantly warmer as one 
+                As expected, the weather becomes significantly warmer as one 
                 approaches the equator (0 Deg. Latitude). More interestingly, 
                 however, is the fact that the southern hemisphere tends to be 
                 warmer this time of year than the northern hemisphere. This may 
