--- a/cloud.html
+++ b/cloud.html
@@ -70,7 +70,7 @@
                 </div> 
                 <div class = 'row'> 
                     <div class = 'col-md-6'> 
-                        <a href='cloud.html' class = "active" aria-pressed="true"><img class = 'compare-img' src = "assets/images/Fig3.png" alt='Latitude vs. Cloudiness'></a>
+                        <a href='cloud.html' class = "active" aria-pressed="true"><img class = 'compare-img border-active' src = "assets/images/Fig3.png" alt='Latitude vs. Cloudiness'></a>
                     </div>
                     <div class = 'col-md-6'>
                         <a href='wind.html'><img class = 'compare-img' src = "assets/images/Fig4.png" alt='Latitude vs. Wind Speed'></a>
