--- a/humidity.html
+++ b/humidity.html
@@ -66,7 +66,7 @@
                         <a href='maxtemp.html'><img class = 'compare-img' src = "assets/images/Fig1.png" alt='Latitude vs. Max Temperature'></a>
                     </div>
                     <div class = 'col-md-6'>
-                        <a href='humidity.html' class = "active" aria-pressed="true"><img class = 'compare-img' src = "assets/images/Fig2.png" alt='Latitude vs. Humidity'></a>
+                        <a href='humidity.html' class = "active" aria-pressed="true"><img class = 'compare-img border-active' src = "assets/images/Fig2.png" alt='Latitude vs. Humidity'></a>
                     </div>
                 </div> 
                 <div class = 'row'> 
