--- a/wind.html
+++ b/wind.html
@@ -74,7 +74,7 @@
                         <a href='cloud.html'><img class = 'compare-img' src = "assets/images/Fig3.png" alt='Latitude vs. Cloudiness'></a>
                     </div>
                     <div class = 'col-md-6'>
-                        <a href='wind.html' class = "active" aria-pressed="true"><img class = 'compare-img' src = "assets/images/Fig4.png" alt='Latitude vs. Wind Speed'></a>
+                        <a href='wind.html' class = "active" aria-pressed="true"><img class = 'compare-img border-active' src = "assets/images/Fig4.png" alt='Latitude vs. Wind Speed'></a>
                         <br>
                     </div>   
                 </div>
