--- a/maxtemp.html
+++ b/maxtemp.html
@@ -64,7 +64,7 @@
                 <hr/>
                 <div class = 'row'>
                     <div class = 'col-md-6'>
-                        <a href='maxtemp.html' class = "active" aria-pressed="true"><img class = 'compare-img' src = "assets/images/Fig1.png" alt='Latitude vs. Max Temperature'></a>
+                        <a href='maxtemp.html' class = "active" aria-pressed="true"><img class = 'compare-img border-active' src = "assets/images/Fig1.png" alt='Latitude vs. Max Temperature'></a>
                     </div>
                     <div class = 'col-md-6'>
                         <a href='humidity.html'><img class = 'compare-img' src = "assets/images/Fig2.png" alt='Latitude vs. Humidity'></a>
