--- a/index.html
+++ b/index.html
@@ -49,16 +49,15 @@
                 <h3 class="header-style">Summary: Latitude vs. X</h3>
                 <hr/>
                 <img src = "assets/images/Fig1.png" class = "img-align" alt='Latitude vs. Max Temperature'>
-                The purpose of this project was to analyze how weather
-                changes as you get closer to the equator. To accomplish
-                this analysis, we first pulled data from the OpenWeatherMAP 
+                The purpose of this project was to analyze how the weather
+                changes as you approach or move away from the equator. The data was pulled from the OpenWeatherMAP 
                 API to assemble a dataset on over 500 cities.
                 <br><br>
-                After assembling the dataset, we used Matplotlib to plot 
-                various aspects of the weather vs. latitude. Factors we looked at 
+                After assembling the dataset, the module Matplotlib was used to plot 
+                various aspects of the weather vs. latitude. The factors we looked at 
                 included: temperature, cloudiness, wind speed, and humidity. This 
                 site provides the source data and visualizations created as part 
-                of the analysis, as well as explanations and descriptions of any 
+                of the analysis. Each visialization is paired with an explanations and descriptions of any 
                 trends and correlations witnessed.
             </div>
          </div>
